Fixed the vertical scrollbar

--- a/src/app/core/modules/table/table.component.scss
+++ b/src/app/core/modules/table/table.component.scss
@@ -2,20 +2,6 @@
   width: calc(100vw - 340px)
 }
 
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-  width: 100%;
-  table-layout: fixed
-}
-
-table td,
-table th {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
 .cdk-drag-animating {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
